--- a/lessons.html
+++ b/lessons.html
@@ -8,10 +8,10 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            color: white;
+            color: #006400; /* Vert foncé pour le texte */
             text-align: center;
-            background: url('https://upload.wikimedia.org/wikipedia/commons/f/f8/Green_Tree_Python_%28Morelia_viridis%29.jpg') no-repeat center center fixed;
-            background-size: cover;
+            background-color: #228B22; /* Vert herbe comme fond */
+            font-style: italic; /* Texte en italique */
         }
         header {
             padding: 20px;
@@ -36,7 +36,7 @@
             display: block;
             margin: 10px 0;
             padding: 10px;
-            background: green;
+            background: #006400; /* Vert foncé pour les liens */
             color: white;
             text-decoration: none;
             font-size: 1.2em;
@@ -44,7 +44,7 @@
             transition: background-color 0.3s;
         }
         .lesson-list a:hover {
-            background: darkgreen;
+            background: #004d00; /* Vert encore plus foncé au survol */
         }
     </style>
 </head>
@@ -60,10 +60,7 @@
         <a href="lesson4.html">Leçon 4 : Boucles</a>
         <a href="lesson5.html">Leçon 5 : Fonctions</a>
         <a href="lesson6.html">Leçon 6 : Listes</a>
-        <a href="lesson7.html">Leçon 7 : Dictionnaires</a>
-        <a href="lesson8.html">Leçon 8 : Fichiers</a>
-        <a href="lesson9.html">Leçon 9 : Modules</a>
-        <a href="lesson10.html">Leçon 10 : Classes et Objets</a>
-    </div>
-</body>
-</html>
+        <a href="lesson7.html">Leçon 7 : Dictionnaire
+
+        
+     
