--- a/lessons.html
+++ b/lessons.html
@@ -8,14 +8,14 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            color: #006400; /* Vert foncé pour le texte */
+            color: black; /* Noir pour le texte */
             text-align: center;
-            background-color: #228B22; /* Vert herbe comme fond */
+            background-color: #006400; /* Vert foncé comme fond */
             font-style: italic; /* Texte en italique */
         }
         header {
             padding: 20px;
-            background: rgba(0, 0, 0, 0.6);
+            background: rgba(255, 255, 255, 0.6);
         }
         h1 {
             margin: 0;
@@ -28,7 +28,7 @@
         .lesson-list {
             margin: 20px auto;
             padding: 10px;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(255, 255, 255, 0.7);
             border-radius: 10px;
             max-width: 800px;
         }
@@ -36,7 +36,7 @@
             display: block;
             margin: 10px 0;
             padding: 10px;
-            background: #006400; /* Vert foncé pour les liens */
+            background: black; /* Noir pour les liens */
             color: white;
             text-decoration: none;
             font-size: 1.2em;
@@ -44,7 +44,7 @@
             transition: background-color 0.3s;
         }
         .lesson-list a:hover {
-            background: #004d00; /* Vert encore plus foncé au survol */
+            background: #333333; /* Gris foncé au survol */
         }
     </style>
 </head>
@@ -60,7 +60,10 @@
         <a href="lesson4.html">Leçon 4 : Boucles</a>
         <a href="lesson5.html">Leçon 5 : Fonctions</a>
         <a href="lesson6.html">Leçon 6 : Listes</a>
-        <a href="lesson7.html">Leçon 7 : Dictionnaire
-
-        
-     
+        <a href="lesson7.html">Leçon 7 : Dictionnaires</a>
+        <a href="lesson8.html">Leçon 8 : Fichiers</a>
+        <a href="lesson9.html">Leçon 9 : Modules</a>
+        <a href="lesson10.html">Leçon 10 : Classes et Objets</a>
+    </div>
+</body>
+</html>
