--- a/lessons.html
+++ b/lessons.html
@@ -8,14 +8,17 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            color: black; /* Noir pour le texte */
+            color: #006400; /* Vert foncé pour le texte */
             text-align: center;
-            background-color: #006400; /* Vert foncé comme fond */
+            background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/f8/Green_Tree_Python_%28Morelia_viridis%29.jpg'); /* Image de serpent */
+            background-size: cover; /* Assure que l'image couvre toute la fenêtre */
+            background-position: center; /* Centre l'image */
             font-style: italic; /* Texte en italique */
+            height: 100vh; /* Remplir toute la hauteur de l'écran */
         }
         header {
             padding: 20px;
-            background: rgba(255, 255, 255, 0.6);
+            background: rgba(0, 0, 0, 0.6); /* Fond sombre semi-transparent pour le header */
         }
         h1 {
             margin: 0;
@@ -28,7 +31,7 @@
         .lesson-list {
             margin: 20px auto;
             padding: 10px;
-            background: rgba(255, 255, 255, 0.7);
+            background: rgba(0, 0, 0, 0.7); /* Fond sombre pour la liste des leçons */
             border-radius: 10px;
             max-width: 800px;
         }
@@ -36,7 +39,7 @@
             display: block;
             margin: 10px 0;
             padding: 10px;
-            background: black; /* Noir pour les liens */
+            background: #006400; /* Vert foncé pour les liens */
             color: white;
             text-decoration: none;
             font-size: 1.2em;
@@ -44,7 +47,7 @@
             transition: background-color 0.3s;
         }
         .lesson-list a:hover {
-            background: #333333; /* Gris foncé au survol */
+            background: #004d00; /* Vert encore plus foncé au survol */
         }
     </style>
 </head>
