--- a/lesson1.html
+++ b/lesson1.html
@@ -10,8 +10,7 @@
             font-family: Arial, sans-serif;
             color: white;
             text-align: center;
-            background: url('https://upload.wikimedia.org/wikipedia/commons/f/f8/Green_Tree_Python_%28Morelia_viridis%29.jpg') no-repeat center center fixed;
-            background-size: cover;
+            background-color: #a8d5ba; /* Vert clair comme fond */
         }
         header {
             padding: 20px;
