--- a/lesson1.html
+++ b/lesson1.html
@@ -10,7 +10,8 @@
             font-family: Arial, sans-serif;
             color: white;
             text-align: center;
-            background-color: #a8d5ba; /* Vert clair comme fond */
+            background: url('https://upload.wikimedia.org/wikipedia/commons/f/f8/Green_Tree_Python_%28Morelia_viridis%29.jpg') no-repeat center center fixed;
+            background-size: cover; /* L'image couvre tout l'écran */
         }
         header {
             padding: 20px;
@@ -92,3 +93,6 @@ print("Bonjour, Python!")
     </script>
 </body>
 </html>
+
+ 
+  
