--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         h1 {
             margin: 0;
             font-size: 2.5em;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
         }
         p {
             font-size: 1.2em;
             margin: 20px 0;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
         }
         .button {
             display: inline-block;
@@ -33,10 +35,12 @@
             text-decoration: none;
             font-size: 1.5em;
             border-radius: 5px;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, transform 0.3s;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
         }
         .button:hover {
-            background-color: darkgreen;
+            background-color: #228B22; /* Vert forêt */
+            transform: scale(1.1);
         }
         .lesson-list {
             margin: 20px auto;
@@ -59,6 +63,16 @@
         .lesson-list a:hover {
             background: darkgreen;
         }
+        footer {
+            padding: 10px;
+            background: rgba(0, 0, 0, 0.6);
+            color: white;
+            font-size: 0.9em;
+        }
+        footer a {
+            color: lightgreen;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -67,5 +81,11 @@
         <p>Apprenez les bases de Python rapidement, facilement et gratuitement.</p>
         <a href="lessons.html" class="button">Commencer</a>
     </header>
+    <footer>
+        <p>Crédits image : Wikipedia Commons - Python Vert</p>
+        <p>Contactez-nous à <a href="mailto:support@codereptilien.com">support@codereptilien.com</a></p>
+    </footer>
 </body>
 </html>
+
+      
