--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
             font-family: Arial, sans-serif;
             color: white;
             text-align: center;
-            background: url('https://upload.wikimedia.org/wikipedia/commons/f/f8/Green_Tree_Python_%28Morelia_viridis%29.jpg') no-repeat center center fixed;
+            background: green; /* Couleur temporaire */
+            background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/f8/Green_Tree_Python_%28Morelia_viridis%29.jpg');
+            background-repeat: no-repeat;
+            background-position: center;
+            background-attachment: fixed;
             background-size: cover;
         }
         header {
@@ -42,27 +46,6 @@
             background-color: #228B22; /* Vert forêt */
             transform: scale(1.1);
         }
-        .lesson-list {
-            margin: 20px auto;
-            padding: 10px;
-            background: rgba(0, 0, 0, 0.7);
-            border-radius: 10px;
-            max-width: 800px;
-        }
-        .lesson-list a {
-            display: block;
-            margin: 10px 0;
-            padding: 10px;
-            background: green;
-            color: white;
-            text-decoration: none;
-            font-size: 1.2em;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-        .lesson-list a:hover {
-            background: darkgreen;
-        }
         footer {
             padding: 10px;
             background: rgba(0, 0, 0, 0.6);
@@ -88,4 +71,5 @@
 </body>
 </html>
 
-      
+ 
+  
