--- a/lesson4.html
+++ b/lesson4.html
@@ -21,37 +21,27 @@
             margin: 0;
             font-size: 2.5em;
         }
-        p {
-            font-size: 1.2em;
-            margin: 20px 0;
-        }
         .content {
             margin: 20px auto;
             padding: 20px;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.8);
             border-radius: 10px;
-            max-width: 800px;
+            max-width: 900px;
+            text-align: left;
+        }
+        pre {
+            background: black;
+            color: lightgreen;
+            padding: 10px;
+            border-radius: 5px;
+            overflow-x: auto;
+        }
+        ul {
+            line-height: 1.8;
         }
         .exercise {
-            margin: 20px 0;
-        }
-        #successMessage {
-            display: none;
-            color: pink;
-            font-size: 1.5em;
-            margin: 20px 0;
-        }
-        #nextLesson {
-            display: none;
-            padding: 10px 20px;
-            background-color: green;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 1.2em;
-        }
-        #nextLesson:hover {
-            background-color: darkgreen;
+            margin-top: 20px;
+            text-align: center;
         }
     </style>
 </head>
@@ -60,44 +50,109 @@
         <h1>Leçon 4 : Conditions (if/else)</h1>
     </header>
     <div class="content">
-        <p>Les structures conditionnelles permettent d'exécuter des blocs de code uniquement si une condition donnée est vraie. Voici un exemple avec `if`, `elif`, et `else` :</p>
-        <pre style="background: black; color: lightgreen; padding: 10px; text-align: left;">
-# Exemple de condition
+        <h2>Introduction</h2>
+        <p>Les structures conditionnelles sont essentielles en programmation. Elles permettent de contrôler l'exécution de blocs de code selon des critères spécifiques. En Python, les mots-clés <code>if</code>, <code>elif</code>, et <code>else</code> permettent de définir ces conditions.</p>
+
+        <h2>1. Syntaxe de base</h2>
+        <p>La syntaxe de base pour une condition <code>if</code> est la suivante :</p>
+        <pre>
+if condition:
+    # Instructions si la condition est vraie
+elif autre_condition:
+    # Instructions si l'autre condition est vraie
+else:
+    # Instructions si aucune condition n'est vraie
+        </pre>
+        <p>Chaque bloc d'instructions est délimité par une indentation (tabulation ou 4 espaces). Python repose sur cette indentation pour structurer le code.</p>
+
+        <h2>2. Exemples pratiques</h2>
+        <p>Voici un exemple simple :</p>
+        <pre>
 age = 20
 
 if age < 18:
     print("Vous êtes mineur.")
 elif age == 18:
-    print("Vous êtes majeur, mais tout juste!")
+    print("Vous venez de devenir majeur!")
 else:
     print("Vous êtes majeur.")
         </pre>
-        <div class="exercise">
-            <p><strong>Exercice :</strong></p>
-            <p>Écrivez un programme qui vérifie si un nombre est positif, négatif ou égal à zéro. Saisissez votre code ci-dessous :</p>
-            <textarea id="userCode" rows="4" cols="50" placeholder="number = 0
-if number > 0:
-    print('Positif')
-elif number < 0:
-    print('Négatif')
+
+        <h3>2.1 Conditions imbriquées</h3>
+        <p>Les conditions peuvent être imbriquées pour gérer des cas complexes :</p>
+        <pre>
+note = 85
+
+if note >= 50:
+    if note >= 75:
+        print("Excellente performance !")
+    else:
+        print("Performance correcte.")
 else:
-    print('Zéro')"></textarea>
-            <br>
-            <button onclick="checkExercise()">Vérifier</button>
-            <p id="successMessage">Félicitations ! Vous pouvez passer à la leçon suivante.</p>
-            <a id="nextLesson" href="lesson5.html">Leçon suivante</a>
-        </div>
+    print("Insuffisant.")
+        </pre>
+
+        <h3>2.2 Comparaisons multiples</h3>
+        <p>Vous pouvez combiner plusieurs conditions avec les opérateurs logiques (<code>and</code>, <code>or</code>, <code>not</code>) :</p>
+        <pre>
+temperature = 25
+
+if temperature > 0 and temperature < 30:
+    print("La température est agréable.")
+else:
+    print("La température est extrême.")
+        </pre>
+
+        <h2>3. Cas pratiques</h2>
+        <p>Voyons quelques exemples concrets :</p>
+
+        <h3>3.1 Vérification de l'accès à un site</h3>
+        <pre>
+age = 16
+autorisation_parentale = True
+
+if age >= 18 or autorisation_parentale:
+    print("Accès autorisé.")
+else:
+    print("Accès refusé.")
+        </pre>
+
+        <h3>3.2 Catégorisation d'un nombre</h3>
+        <pre>
+nombre = -5
+
+if nombre > 0:
+    print("Le nombre est positif.")
+elif nombre < 0:
+    print("Le nombre est négatif.")
+else:
+    print("Le nombre est zéro.")
+        </pre>
+
+        <h2>4. Exercice interactif</h2>
+        <p>Créez un programme qui classe un âge donné en trois catégories : enfant (moins de 12 ans), adolescent (12-17 ans) et adulte (18 ans et plus).</p>
+        <textarea id="userCode" rows="8" cols="60" placeholder="age = 15\nif age < 12:\n    print('Enfant')\nelif age <= 17:\n    print('Adolescent')\nelse:\n    print('Adulte')"></textarea>
+        <br><br>
+        <button onclick="checkExercise()">Vérifier</button>
+        <p id="successMessage" style="display:none; color: lightgreen;">Félicitations ! Vous pouvez passer à la leçon suivante.</p>
+        <a id="nextLesson" href="lesson5.html" style="display:none; color: white; background: green; padding: 10px; border-radius: 5px;">Leçon suivante</a>
+
+        <h2>5. Exercices supplémentaires</h2>
+        <p>Essayez ces exercices pour tester vos compétences :</p>
+        <ul>
+            <li><strong>Exercice 1 :</strong> Écrivez un programme qui vérifie si une année donnée est bissextile.</li>
+            <li><strong>Exercice 2 :</strong> Écrivez un programme qui vérifie si une personne est éligible pour voter (âge minimum requis : 18 ans).</li>
+            <li><strong>Exercice 3 :</strong> Écrivez un programme qui vérifie si un nombre est pair ou impair.</li>
+        </ul>
+        <p>Bonne chance !</p>
     </div>
     <script>
         function checkExercise() {
             const userCode = document.getElementById('userCode').value.trim();
-            const correctAnswer = "number = 0\nif number > 0:\n    print('Positif')\nelif number < 0:\n    print('Négatif')\nelse:\n    print('Zéro')";
-            const successMessage = document.getElementById('successMessage');
-            const nextLesson = document.getElementById('nextLesson');
-
+            const correctAnswer = "age = 15\nif age < 12:\n    print('Enfant')\nelif age <= 17:\n    print('Adolescent')\nelse:\n    print('Adulte')";
             if (userCode === correctAnswer) {
-                successMessage.style.display = 'block';
-                nextLesson.style.display = 'inline-block';
+                document.getElementById('successMessage').style.display = 'block';
+                document.getElementById('nextLesson').style.display = 'inline-block';
             } else {
                 alert('Votre réponse est incorrecte. Essayez encore !');
             }
